--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <ul>
         <li>Home</li>
         <li>About</li>
+        <li>mrj</li>
         <li>Blog</li>
         <li>Contact</li>
     </ul>
